--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
+    "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@types/lodash": "^4.14.149",
     "bcryptjs": "^2.4.3",
@@ -32,6 +34,8 @@
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
@@ -46,6 +50,8 @@
     "@types/jest": "25.1.4",
     "@types/mongoose": "^5.7.9",
     "@types/node": "^13.9.1",
+    "@types/passport": "^1.0.3",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
